# eda-invoices

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  fabfile.py  fly.toml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml  test.yml
data/: dump2.py
eda/: app.py
etc/: crontab.skel  gunicorn.conf  supervisord.conf
initial_data/: auth.yaml  invoices.yaml
samples/: costumers,yaml  costumers.yaml  musterenergiedatenexcel.xlsx - ConsumptionDataReport.csv
snippets/: analyze.py  dump.py
snippets/configuration/: data_classes.py
snippets/crunching_pandas/: conversion.py  group_by_day.py
snippets/minimal_django/: app.py.rst
src/eda_invoices/: __main__.py  cli.py  cmd.py  manage.py
src/eda_invoices/calculations/: calc.py  sample_data.py  utils.py
src/eda_invoices/calculations/config/: data.py  enums.py  reader.py
src/eda_invoices/costumers/: data.py  utils.py
src/eda_invoices/eda_invoices/: asgi.py  settings.py  urls.py  wsgi.py
src/eda_invoices/invoices/: admin.py  apps.py  json_encoder.py  models.py  urls.py  views.py
src/eda_invoices/invoices/migrations/: 0001_initial.py  0002_alter_invoice_data.py  0002_auto_20221226_2106.py  0002_auto_20230209_1437.py  0003_auto_20230209_1459.py
src/eda_invoices/uploads/: admin.py  apps.py  decorators.py  forms.py  mixins.py  models.py  urls.py  utils.py  views.py
src/eda_invoices/uploads/migrations/: 0001_initial.py  0002_alter_userupload_short_uuid.py  0002_userupload_email.py  0003_auto_20230206_1622.py  0004_auto_20230206_2043.py
src/eda_invoices/web/: app.py  asgi.py  models.py  settings.py  urls.py  utils.py  wsgi.py
src/eda_invoices/web/templates/: _base.html  home.html  invoice.html  styles.css
src/eda_invoices/web/templates/_includes/: _generic_form.html
src/eda_invoices/web/templates/invoices/: invoice.html  list.html
src/eda_invoices/web/templates/invoices/_includes/: _invoice_details.html  _invoice_head.html  _invoice_overview.html
src/eda_invoices/web/templates/uploads/: customer_details.html  generic_form.html  personal_data.html  thank_you.html  upload_file.html
src/eda_invoices/web/templatetags/: invoice_extras.py
