[tool.poetry]
name = "eda_invoices"
version = "0.1.0"
description = ""
authors = ["Stephan Poetschner <stephan.poetschner@gmail.com>"]
license = "mit"
packages = [
    { include = "eda_invoices", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0"
pytz = "*"
pandas = "^1.4.1"
django = "3.2"
pydantic = "^1.10.2"
click = "^8.1.3"
python-decouple = "^3.6"
pre-commit = "^2.20.0"

[tool.poetry.scripts]
eda_invoices_cli = 'eda_invoices.cli:cli'

[tool.poetry.group.dev.dependencies]
ipython = "^8.1.1"
pytest = "^7.0.1"
ipdb = "^0.13.9"
pre-commit = "^2.20.0"

[tool.isort]
multi_line_output = 3

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
