[tool.poetry]
name = "eda_invoices"
version = "0.1.0"
description = ""
authors = ["Stephan Poetschner <stephan.poetschner@gmail.com>"]
license = "mit"
packages = [
    { include = "eda_invoices", from = "src" },
]

[tool.poetry.scripts]
eda_invoices_cli = 'eda_invoices.cli:cli'

[tool.poetry.dependencies]
python = "^3.8"

PyYAML = "^6.0"
pytz = "*"
pandas = "^1.5"
django = "~4.1"
pydantic = "^1.10"
click = "^8.1"
python-decouple = "^3.6"
dj-database-url = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.group.dev.dependencies]
ipython = "*"
ipdb = "*"
pre-commit = "*"
black = "*"
isort = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-simplify = "*"

[tool.isort]
py_version = 39
profile = "black"
multi_line_output = 3
force_single_line = true
combine_as_imports = true
src_paths = ["src", "tests"]
extend_skip = ["setup.py"]

[tool.black]
line-length = 88
preview = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
