
[metadata]
# This is required for any package to install with a name
name = eda_invoices

# If you are using the "src" layout then we need the following
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[flake8]
ignore = E203,B950
max-line-length = 160
exclude = tests/*
max-complexity = 10
